# learnEase-Chatbot

./: .env  .env.example  README.md  app.py  learn_ease_app.py  pyproject.toml  requirements.txt  vercel.json
agent/: create_agent.py  extract_messages.py
config/: engine.py
controllers/chat/: __init__.py  chat.py
controllers/chatbot/: __init__.py  chatbot.py
extensions/: ext_blueprints.py
filters/: filter_table.py  query_full.py  table_group.py
langChain/: __init__.py  handle_input.py  handle_output.py  langChain.py  query.py  queryOutput.py
lib/: convert_text_to_sql.py  external_api.py  train.py
models/: type_question.py
tools/: chat.py  create_student.py  query.py
